--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,8 +112,7 @@ if (USBIP)
     target_include_directories(canokey-usbip SYSTEM PRIVATE littlefs)
     target_compile_definitions(canokey-usbip PRIVATE HW_VARIANT_NAME="CanoKey USB/IP")
     target_compile_options(canokey-usbip PRIVATE "-fsanitize=address")
-    find_package(Threads)
-    target_link_libraries(canokey-usbip general canokey-core "-fsanitize=address" Threads::Threads)
+    target_link_libraries(canokey-usbip general canokey-core "-fsanitize=address")
     add_dependencies(canokey-usbip gitrev)
 endif (USBIP)
 
