fix working dir

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -93,7 +93,7 @@ jobs:
     - name: Test the FIDO2
       run: |
         echo 1 >/tmp/canokey-test-nfc # Emulate the NFC mode
-        test-real/test-libfido2.sh
+        pushd test-real && ./test-libfido2.sh && popd
         cd fido2-tests
         ~/.local/bin/pytest --color=yes --nfc tests/standard/
         ~/.local/bin/pytest --color=yes --nfc tests/vendor/canokeys/ --capture=no 
