--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
         ./test-via-pcsc/build_fido_tests.sh
         sudo ldconfig
         which fido2-token
-        ldd fido2-token
+        ldd $(which fido2-token)
 
     - name: Build for Test
       run: |
