WIP: refactor key and openpgp

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,3 +25,10 @@ add_mocked_test(piv
         ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/device-sim.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/usb-dummy.c
         LINK_LIBRARIES canokey-core)
+
+add_mocked_test(key
+        SOURCES
+        ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/bd/lfs_filebd.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/device-sim.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/usb-dummy.c
+        LINK_LIBRARIES canokey-core)
