--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,21 +31,21 @@ jobs:
         path: ~/go/pkg/mod
         key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('./go.mod') }}
 
-    - name: Cache Patched GPG
-      uses: actions/cache@v1
-      env:
-        cache-name: cache_gpg_binary
-      with:
-        path: gnupg
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./test-via-pcsc/build_gpg.sh') }}
-
-    - name: Build Patched GPG
-      run: |
-        ./test-via-pcsc/build_gpg.sh
-        gpg --version
-    
-    - name: Build FIDO Tests
-      run: ./test-via-pcsc/build_fido_tests.sh
+#    - name: Cache Patched GPG
+#      uses: actions/cache@v1
+#      env:
+#        cache-name: cache_gpg_binary
+#      with:
+#        path: gnupg
+#        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./test-via-pcsc/build_gpg.sh') }}
+#
+#    - name: Build Patched GPG
+#      run: |
+#        ./test-via-pcsc/build_gpg.sh
+#        gpg --version
+#
+#    - name: Build FIDO Tests
+#      run: ./test-via-pcsc/build_fido_tests.sh
 
     - name: Build for Test
       run: |
