test fido over udp

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -106,11 +106,13 @@ jobs:
 
     - name: Test the FIDO2
       run: |
-        echo 1 >/tmp/canokey-test-nfc # Emulate the NFC mode
+        #echo 1 >/tmp/canokey-test-nfc # Emulate the NFC mode
         #pushd test-real && ./test-libfido2.sh && popd
         cd fido2-tests
-        ~/.local/bin/pytest --color=yes --nfc tests/standard/
-        #~/.local/bin/pytest --color=yes --nfc tests/vendor/canokeys/ --capture=no
+        ../build/fido-hid-over-udp &
+        ~/.local/bin/pytest --color=yes --sim tests/standard/ -k "not test_keep_alive"
+        #~/.local/bin/pytest --color=yes --sim tests/vendor/canokeys/
+        kill %1
 
     - name: Test the U2F
       run: |
