Make fido2-tests up-to-date

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,6 +110,7 @@ jobs:
         #pushd test-real && ./test-libfido2.sh && popd
         cd fido2-tests
         #../build/fido-hid-over-udp &
+        git pull
         ~/.local/bin/pytest --color=yes --vendor canokeys --nfc tests/standard/
         #~/.local/bin/pytest --color=yes --sim tests/vendor/canokeys/
         #kill %1
