--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -174,6 +174,16 @@ jobs:
         echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
         test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6
 
+    - name: Test the ckman Utility
+      run: |
+        pip3 install canokey-manager
+        ckman --log-level DEBUG info
+        ckman oath accounts add steam1 HXDMVJECJJWSRB3HWIZR4IFUGFTMXBOZ -i Steam
+        ckman oath accounts code
+        ckman openpgp info
+        ckman piv info
+        #ckman fido credentials list --pin 123456
+
     - name: Test the OATH
       run: go test -v test-via-pcsc/oath_test.go
 
@@ -468,7 +478,7 @@ jobs:
           PIVGenKeyCert $s "/CN=CertAtSlot$s/" RSA2048
           yubico-piv-tool -r "$RDID" -a import-certificate -s $s -i test-via-pcsc/long-cert.pem
         done
-    
+
     - name: Prepare the Test Coverage Report
       run: |
         go test test-via-pcsc/admin_test.go -v -run TestFSUsage
