--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -523,9 +523,10 @@ jobs:
           yubico-piv-tool -r "$RDID" -a import-certificate -s $s -i test-via-pcsc/long-cert.pem
         done
         openssl rand -base64 -out /tmp/rand-pi 242
-        openssl rand -base64 -out /tmp/rand-fig 509
-        openssl rand -base64 -out /tmp/rand-face 509
+        openssl rand -base64 -out /tmp/rand-fig 508
+        openssl rand -base64 -out /tmp/rand-face 508
         yubico-piv-tool -r "$RDID" -a write-object --id 0x5fc109 -i /tmp/rand-pi -f base64
+        yubico-piv-tool -r "$RDID" -a read-object --id 0x5fc109 -o /tmp/read-pi 2>&1 | grep 'Failed fetching'
         yubico-piv-tool -r "$RDID" -a write-object --id 0x5fc108 -i /tmp/rand-face -f base64
         yubico-piv-tool -r "$RDID" -a write-object --id 0x5fc103 -i /tmp/rand-fig -f base64
         yubico-piv-tool -r "$RDID" -a verify-pin -P 654321 -a read-object --id 0x5fc103 -o /tmp/read-fig -f base64
