--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ jobs:
   build_opensc:
     name: Build opensc package
     #if: github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Cache deb files
       uses: actions/cache@v4
@@ -69,7 +69,7 @@ jobs:
 
   build_test:
     name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: build_opensc
     steps:
     - name: Download backport OpenSC package
